style.css
/* poppins font */
@import url('https://fonts.googleapis.com/css2?family=Gelasio:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

body, html{
    font-size: 18px;
    height: 100vh;
    display: flex;
    overflow: hidden;
    align-items: center;
    justify-content: center;
    caret-color: transparent;
    font-family: poppins, Arial, Helvetica, sans-serif;
    background-color: brown;
    -webkit-tap-highlight-color: transparent;
}

@media screen and (max-width:600px) {
    body, html{
        font-size: 15px;
    }
}

@media screen and (max-width:450px) {
    body, html{
        font-size: 12px;
    }
}

@media screen and (max-width:350px) {
    body, html{
        font-size: 3vw;
    }
}

@media screen and (max-width:300px) {
    body, html{
        font-size: 3vw;
    }
}

/* calculator */
.calculator{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    border-radius: 2.1rem;
    margin: 1rem;
    padding: 1.8rem;
    background-color: wheat;
    overflow-x: hidden;
    box-shadow: 0.4rem 0.4rem 0.3rem 0.2rem rgba(0, 0, 0, 0.466);
}   

/* calculator screen */
.calculator .screen{
    display: flex;
    padding-right: 0.5rem;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    font-size: 5rem;
    font-weight: 500;
    background-color: rgb(43, 59, 43);
    height: 8rem;  
    margin: 1.5rem;
    color: beige;
    max-width: 340px;
    overflow: hidden;
    width: 100%;
    box-shadow: inset 0.4rem 0.4rem 0.3rem 0.2rem rgba(0, 0, 0, 0.4);
}

/* keypad */
.calculator .keypad{
    display: flex;
    align-items: flex-start;
    justify-content: flex-end;
    padding-top: 1rem;
    flex-direction: column;
}

.calculator .keypad div{
    display: flex;
    justify-content: center;
    align-items: center;
}

.calculator .keypad div button{
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #333;
    border: none;
    box-shadow: inset 0 0 0.5rem 0.4rem rgba(0, 0, 0, 0.4);
    padding: 1em;
    width: 4rem;
    height: 4rem;
    border-radius: 0.8rem;
    margin: 0.4rem;
    font-weight: 700;
    font-size: 1.4rem;
    color: beige;
}

.calculator .keypad button:active{
    transform: scale(0.97);
}

.calculator .keypad .clear-btn{
    background-color: rgba(255, 0, 0, 0.842);
}

.calculator .keypad .operator-btn, .calculator .keypad #percentage{
    background-color: orange;
}

.calculator .keypad #equals{
    background-color: green;
}

